# extended_object_detection

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  package.xml
config/: eod_example.rviz  eod_example_oak.rviz  random_camera.yaml
config/object_base_example/: ObjectBaseExample.xml  TorchExample.xml  soft_tracking_tests.xml
config/object_base_example/histograms/: Black.yaml  BrightRed.yaml  BrightYellow.yaml  DarkRed.yaml  Orange.yaml  Pink.yaml  Skin.yaml
config/object_base_example/ssd_mobilenet_v1_coco_2017_11_17/: config.pbtxt  mscoco_label_map.pbtxt
launch/: blob_params_collector.launch  extended_object_detection_example.launch  extended_object_detection_kinekt_example.launch  extended_object_detection_oakd_example.launch  extended_object_detection_webcam_example.launch  hist_color_params_collector_contour.launch  hist_color_params_collector_point.launch  hough_circle_params_collector.launch  hsv_color_params_collector.launch  sems_experiments.launch  soft_tracking_tests.launch  torch_standalone.launch
msg/: BaseObject.msg  ComplexObject.msg  ComplexObjectArray.msg  Contour.msg  ExtractedInfo.msg  Keypoints.msg  Rect.msg  Scene.msg  SceneArray.msg  SceneObject.msg  SimpleObject.msg  SimpleObjectArray.msg  StatsArray.msg  StatsStream.msg  Track.msg
src/extended_object_detection_node/: eod_node.cpp  eod_node.h  extended_object_detection_node.cpp
src/lib/: ObjectBase.cpp
src/lib/detectors/: ArucoDetector.cpp  BasicMotionDetector.cpp  BlobDetector.cpp  DepthDetector.cpp  DimentionDetector.cpp  DistanceDetector.cpp  DnnDetector.cpp  FaceDlibDetector.cpp  FeatureDetector.cpp  HaarCascadeDetector.cpp  HistColorDetector.cpp  HoughDetector.cpp  HsvColorDetector.cpp  LogicDetector.cpp  PoseDetector.cpp  QrDetector.cpp  QrZbarDetector.cpp  RoughDistanceDetector.cpp  SizeDetector.cpp  TensorFlowDetector.cpp
src/lib/detectors/include/: ArucoDetector.h  BasicMotionDetector.h  BlobDetector.h  DepthDetector.h  DimentionDetector.h  DistanceDetector.h  DnnDetector.h  FaceDlibDetector.h  FeatureDetector.h  HaarCascadeDetector.h  HistColorDetector.h  HoughDetector.h  HsvColorDetector.h  LogicDetector.h  PoseDetector.h  QrDetector.h  QrZbarDetector.h  RoughDistanceDetector.h  SimpleShapeDetector.h  SizeDetector.h  TensorFlowDetector.h
src/lib/include/: ObjectBase.h  ObjectIdentifier.h
src/lib/relations/: ImageRangeRelation.cpp  LogicRelations.cpp  SizeRelations.cpp  SpaceRelations.cpp  ThreeDimRangeRelation.cpp
src/lib/relations/include/: ImageRangeRelation.h  LogicRelations.h  SizeRelations.h  SpaceRelations.h  ThreeDimRangeRelation.h
src/lib/types/: Attribute.cpp  Clusterization.cpp  ComplexObject.cpp  ComplexObjectGraph.cpp  ExtendedObjectInfo.cpp  Filtering.cpp  Relationship.cpp  SimpleObject.cpp  Tracker.cpp
src/lib/types/include/: Attribute.h  Clusterization.h  ComplexObject.h  ComplexObjectGraph.h  ExtendedObjectInfo.h  Filtering.h  Relationship.h  SimpleObject.h  Tracker.h
src/lib/utils/: contour_utils.cpp  drawing_utils.cpp  geometry_utils.cpp
src/lib/utils/include/: contour_utils.h  drawing_utils.h  geometry_utils.h
src/offline/: offline_image.cpp  offline_video.cpp
src/offline_video/: offline_video.cpp
src/utils/: blob_params_collector.cpp  face_dlib_descriptors_extractor.cpp  hist_color_params_collector_contour.cpp  hist_color_params_collector_point.cpp  hough_circle_params_collector.cpp  hsv_color_params_collector.cpp
srv/: SetSimpleObjects.srv
