<?xml version="1.0"?>
<package format="2">
  <name>extended_object_detection</name>
  <version>1.0.0</version>
  <description>The extended_object_detection package</description>
  
  <maintainer email="moscowskyad@gmail.com">Moscowsky Anton</maintainer>

  <license>MIT</license>


  <url type="website">https://github.com/MoscowskyAnton/extended_object_detection</url> 
  
  <author email="moscowskyad@gmail.com">Moscowsky Anton</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <depend>cmake_modules</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tinyxml</exec_depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
